--- a/poketdo/src/main/resources/static/css/seal.css
+++ b/poketdo/src/main/resources/static/css/seal.css
@@ -10,12 +10,17 @@
 	margin : auto;
 	position:relative;
 	}
-	.seal-information>div:first-child,
+	.seal-information>div:first-child{
+	position:relative;
+	width:300px;
+	height:100px;
+	}
 	.my-seal-information>div:first-child{
 	position:relative;
 	width:300px;
 	height:100px;
 	}
+	.seal-information,
 	.my-seal-information {
 	margin-top:100px;
 	}
@@ -32,16 +37,6 @@
 	height:100px;
 	display:flex;
 	right:10px;
-	  flex-wrap: wrap;
-	  align-content: flex-start;
-	}
-	.my-seal-information>div:nth-child(2){
-	position:absolute;
-	width:700px;
-	height:100px;
-	display:flex;
-	right:150px;
-	bottom:0px;
 	  flex-wrap: wrap;
 	  align-content: flex-start;
 	}
@@ -73,28 +68,56 @@
 	right:180px;
 	font-size:16px;
 	}
-	.my-seal-information>div:nth-child(2) img{
-	position:absolute;
-	bottom:90px;
-	right:10px;
-	font-size:16px;
-	border:1px solid #C2CCEE;
-	border-radius: 5px;
-	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-	}
 	.seal-information>div:nth-child(2)>a> i{
 	position:absolute;
 	bottom:45px;
 	right:0px;
 	font-size:20px;
 	}
+	
+	
+	.my-seal-information>div:nth-child(2){
+	position:absolute;
+	width:800px;
+	height:100px;
+	display:flex;
+	right:10px;
+	bottom:0px;
+	}
+	.my-seal-information>div:nth-child(2)>span:nth-child(1){
+	position:absolute;
+	right:0px;
+	bottom:5px;
+	}
+	.my-seal-information>div:nth-child(2)>span:nth-child(2){
+	position:absolute;
+	left:253px;
+	bottom:120px;
+	}
+	.my-seal-information>div:nth-child(2)>a{
+	position:absolute;
+	right:0px;
+	bottom:25px;
+	text-decoration: none;
+ 	color: inherit;	
+	}
+	.my-seal-information>div:nth-child(2) img{
+	position:absolute;
+	bottom:15px;
+	left:260px;
+	font-size:16px;
+	border:1px solid #C2CCEE;
+	border-radius: 5px;
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+	}
+
 	/*인장 목록*/
 	.seal-container {
 	  display: flex;
 	  flex-wrap: wrap;
 	  align-content: flex-start;
 	  width: 1000px;
-	  height: 1000px;
+	  min-height: 400px;
 	  margin : auto;
 	  margin-bottom:50px;
 	  
@@ -145,4 +168,12 @@
 	width:20px;
 	height:20px;
 	margin-right:5px;
+	}
+	
+	.seal-price{
+	  text-decoration: line-through;
+	  text-decoration-color: gray; /* 가운데 줄 색상 */
+	  text-decoration-thickness: 1px; /* 가운데 줄 굵기 */
+	  text-decoration-skip-ink: none; /* 브라우저 기본값 사용 */
+	  color:gray
 	}
