--- a/poketdo/src/main/resources/static/css/seal.css
+++ b/poketdo/src/main/resources/static/css/seal.css
@@ -31,9 +31,10 @@
 	left:20px;
 	font-size:35px;
 	}
-	.seal-information>div:nth-child(2){
+	.seal-information>div:nth-child(2),
+	.my-seal-information>div:nth-child(2){
 	position:absolute;
-	width:500px;
+	width:800px;
 	height:100px;
 	display:flex;
 	right:10px;
@@ -41,59 +42,19 @@
 	  align-content: flex-start;
 	}
 	
-	.seal-information>div:nth-child(2) > a > span:nth-child(1){
-	position:absolute;
-	bottom:15px;
-	right:25px;
-	font-size:16px;
-	}
-	
-	.seal-information>div:nth-child(2) > a > span:nth-child(2){
-	position:absolute;
-	bottom:43px;
-	right:25px;
-	font-size:16px;
-	}
-	
-	.seal-information>div:nth-child(2) >a> span:nth-child(3){
-	position:absolute;
-	bottom:15px;
-	right:0px;
-	font-size:16px;
-	}
-	
-	.seal-information>div:nth-child(2) span{
-	position:absolute;
-	bottom:15px;
-	right:180px;
-	font-size:16px;
-	}
-	.seal-information>div:nth-child(2)>a> i{
-	position:absolute;
-	bottom:45px;
-	right:0px;
-	font-size:20px;
-	}
-	
-	
-	.my-seal-information>div:nth-child(2){
-	position:absolute;
-	width:800px;
-	height:100px;
-	display:flex;
-	right:10px;
-	bottom:0px;
-	}
+	.seal-information>div:nth-child(2)>span:nth-child(1),
 	.my-seal-information>div:nth-child(2)>span:nth-child(1){
 	position:absolute;
 	right:0px;
 	bottom:5px;
 	}
+	.seal-information>div:nth-child(2)>span:nth-child(2),
 	.my-seal-information>div:nth-child(2)>span:nth-child(2){
 	position:absolute;
 	left:253px;
 	bottom:120px;
 	}
+	.seal-information>div:nth-child(2)>a,
 	.my-seal-information>div:nth-child(2)>a{
 	position:absolute;
 	right:0px;
@@ -101,6 +62,11 @@
 	text-decoration: none;
  	color: inherit;	
 	}
+	.seal-information>div:nth-child(2)>a>i,
+	.my-seal-information>div:nth-child(2)>a>i{
+	font-size:20px;
+	}
+	
 	.my-seal-information>div:nth-child(2) img{
 	position:absolute;
 	bottom:15px;
